--- a/BusLayout/SeatCollectionCell.xib
+++ b/BusLayout/SeatCollectionCell.xib
@@ -19,7 +19,7 @@
                             <constraint firstAttribute="width" constant="40" id="l31-5B-R99"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U7o-yA-Akv">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U7o-yA-Akv">
                         <rect key="frame" x="4" y="15" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -28,7 +28,7 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
-            <color key="backgroundColor" red="0.28235294119999998" green="0.76078431369999999" blue="0.82352941180000006" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="WD8-4Z-Qrh" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="3wI-ci-Et2"/>
                 <constraint firstItem="WD8-4Z-Qrh" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Csc-Kp-tOd"/>
